--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,11 +31,21 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
-
+.header nav {
+    padding-top: 15px;
+    margin-right: 20px;
+    float: right;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+}
 .header div ul {
     list-style-type: none;
 }
 
+}
+.header nav ul {
+    list-style-type: none;
+}
 .header div ul li {
     display: inline-block;
     margin-left: 25px;
