--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,7 +50,10 @@ body {
     display: inline-block;
     margin-left: 25px;
 }
-
+.header nav ul li {
+    display: inline-block
+    margin-left: 25px;
+}   
 a {
     color: #ffffff;
     text-decoration: none;
