--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,15 @@ body {
 .header h1 .seo {
     color: #d9dcd6;
 }
+
+.header div {
+    padding-top: 15px;
+    margin-right: 20px;
+    float: right;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+}
+
 .header nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -31,9 +40,18 @@ body {
     font-size: 20px;
 }
 
+.header div ul {
+    list-style-type: none;
+}
+
 .header nav ul {
     list-style-type: none;
 }
+
+.header div ul li {
+    display: inline-block
+    margin-left: 25px;
+}   
 
 .header nav ul li {
     display: inline-block
